--- a/antispam/antispam.ipynb
+++ b/antispam/antispam.ipynb
@@ -171,7 +171,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "best_estimator = SGDClassifier(alpha=1e-6, loss='log')\n",
