--- a/antispam/antispam.ipynb
+++ b/antispam/antispam.ipynb
@@ -137,13 +137,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "GridSearchCV(cv=None, error_score=nan,\n",
+       "             estimator=SGDClassifier(alpha=0.0001, average=False,\n",
+       "                                     class_weight=None, early_stopping=False,\n",
+       "                                     epsilon=0.1, eta0=0.0, fit_intercept=True,\n",
+       "                                     l1_ratio=0.15, learning_rate='optimal',\n",
+       "                                     loss='hinge', max_iter=1000,\n",
+       "                                     n_iter_no_change=5, n_jobs=None,\n",
+       "                                     penalty='l2', power_t=0.5,\n",
+       "                                     random_state=None, shuffle=True, tol=0.001,\n",
+       "                                     validation_fraction=0.1, verbose=0,\n",
+       "                                     warm_start=False),\n",
+       "             iid='deprecated', n_jobs=-1,\n",
+       "             param_grid={'alpha': [0.0001, 0.001, 0.01, 0.1, 1, 10, 100, 1000,\n",
+       "                                   10000],\n",
+       "                         'loss': ['hinge', 'log', 'modified_huber',\n",
+       "                                  'squared_hinge', 'perceptron']},\n",
+       "             pre_dispatch='2*n_jobs', refit=True, return_train_score=False,\n",
+       "             scoring='f1', verbose=0)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "parameters = {\n",
     "    'loss': ['hinge', 'log', 'modified_huber', 'squared_hinge', 'perceptron'],\n",
-    "    'alpha': [10 ** n for n in range(-6, 7)]\n",
+    "    'alpha': [10 ** n for n in range(-4, 5)]\n",
     "}\n",
     "estimator = SGDClassifier()\n",
     "grid_search = GridSearchCV(estimator=estimator, param_grid=parameters, scoring='f1', n_jobs=-1)\n",
@@ -152,38 +180,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.982385110667856"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "grid_search.best_score_"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'alpha': 0.0001, 'loss': 'modified_huber'}"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "grid_search.best_params_"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "execution_count": 9,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "best_estimator = SGDClassifier(alpha=1e-6, loss='log')\n",
+    "best_estimator = SGDClassifier(alpha=1e-4, loss='hinge')\n",
     "test_data = get_data('data/kaggle_test_data_tab.csv')\n",
-    "tf_idf_test = vectorizer.fit_transform(test_data.Html)\n",
+    "tf_idf_test = vectorizer.transform(test_data.Html)\n",
     "best_estimator.fit(tf_idf_train, train_data.Prediction)\n",
     "test_data.Prediction = best_estimator.predict(tf_idf_test)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('data/result.csv', 'w') as file:\n",
+    "    file.write('Id,Prediction\\n')\n",
+    "    for cur_object in test_data.itertuples():\n",
+    "        file.write('{0},{1}\\n'.format(cur_object.Id, cur_object.Prediction))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
